
* docutils/transforms/universal.py:

  - Added universal.ExposeInternals transform, extracted from
    universal.FinalChecks.
  - Removed universal.FinalChecks transform (logic has been moved to
    several new transforms).
  - Fixed bug with the "expose_internals" setting and Text nodes
    (exposed by the "rawsource" internal attribute).

* docutils/transforms/writer_aux.py: Added to project; auxiliary
  transforms for writers.

  - Added ``Compound`` transform, which flattens compound paragraphs.

* docutils/writers/: Several writer modules (html4css1.py) were
  converted into packages.  Support modules and data files have been
  moved into the packages.

  The stylesheets for the HTML writers are now installed along with
  the code, the code knows where to find them, and the default is to
  use them (actually, to embed them).  Some adjustments to
  configuration files may be necessary.  The easiest way to obtain the
  new default behavior is to remove all settings whose name includes
  "stylesheet".

* docutils/writers/__init__.py:

  - Added universal.Messages and universal.FilterMessages transforms
    as default transforms for all writers.
  - Added ``UnfilteredWriter`` base class for writers that pass the
    document tree on unchanged.

* docutils/writers/docutils_xml.py:

  - Made ``xmlcharrefreplace`` the default output encoding error
    handler.

* docutils/writers/html4css1/: 

  - Added support for image width and height units.
  - Made ``xmlcharrefreplace`` the default output encoding error
    handler.
  - Made ``--embed-stylesheet`` the default rather than
    ``--link-stylesheet``.
  - Moved "id" attribute from container (section etc.) to title's <a>
    tag, to be on the same tag as "name".
    (!!! To be reverted in Docutils 0.5.)
  - Added vertical space between fields of field lists.
  - Added ``--compact-field-lists`` option to remove vertical space in
    simple field lists.