@@ -63,6 +63,8 @@ parts.SectNum                   "sectnum" (d/p)               710
 parts.Contents                  "contents" (d/p),             720
                                 peps.Contents (t/p)
 
+universal.StripComments         Reader (r)                    740
+
 peps.PEPZero                    peps.Headers (t/p)            760
 
 components.Filter               "meta" (d/p)                  780
